@@ -1,0 +1,2 @@
+TARGET		:= rlm_totp.a
+SOURCES		:= rlm_totp.c
