@@ -35,6 +35,7 @@ rlm_sqlcounter
 rlm_sqlippool
 rlm_sql_map
 rlm_test
+rlm_totp
 rlm_unix
 rlm_sometimes
 rlm_wimax
